--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,7 +1,7 @@
 .about-container {
     width: 100%;
     height: 100%;
-    padding: 50px 0px;
+    padding: 100px 0px;
     font-family: var(--font-family);
     display: flex;
     flex-direction: column;
@@ -14,7 +14,7 @@
 .about-bio {
     color: #c5c6c7;
     font-family: var(--font-family);
-    font-size: 10px;
+    font-size: 12px;
     box-sizing: border-box;
     padding: 0px 10px;
 }
@@ -77,10 +77,10 @@
 }
 
 .about-bio-container-image:hover .about-bio-image2 {
-    display: inline;
+    display: block;
 }
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 700px) {
     .about-bio-container {
         flex-direction: column-reverse;
     }
@@ -97,6 +97,8 @@
         width: 100px;
     }
 }
+
+
 
 @media screen and (max-width: 450px) {
     .about-hr {
