--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,7 +1,7 @@
 .home-container {
     width: 100%;
     height: 100%;
-    padding: 50px 0px;
+    padding: 100px 0px;
     font-family: var(--font-family);
     display: flex;
     flex-direction: column;
@@ -37,30 +37,19 @@
 }
 
 .home-greeting-name span {
-    display: inline-block;
+    display: inline;
     width: max-content;
     animation: typing 3s steps(28, end) forwards;
     white-space: nowrap;
     overflow: hidden;
     border-right: 2px solid;
+    margin: 0px;
 }
 
 .home-greeting-name-container {
     display: flex;
     justify-content: left;
     align-items: center;
-    padding: 0px 10px;
-}
-
-
-@keyframes typing {
-    from {
-        width: 0;
-    }
-
-    to {
-        width: 100%;
-    }
 }
 
 
@@ -79,7 +68,19 @@
 }
 
 
-@media screen and (max-width: 550px) {
+@keyframes typing {
+    from {
+        width: 0;
+    }
+
+    to {
+        width: 100%;
+    }
+}
+
+
+
+@media screen and (max-width: 700px) {
     .navbar-links-container {
         display: none;
     }
@@ -89,11 +90,24 @@
         text-align: center;
         font-size: 30px;
         width: max-content;
+        margin: 0px 5px;
+    }
+
+    .home-occupation {
+        margin: 0px 5px;
     }
 
 
     .navbar-menu {
-        display: flex;
+        display: inline;
+    }
+
+    .home-tagline-container {
+        margin: 0px 5px;
+    }
+
+    .home-greeting-name-container {
+        margin: 0px 5px;
     }
 }
 
@@ -130,6 +144,7 @@
         font-size: 18px;
     }
 }
+
 
 @media screen and (max-width: 350px) {
 
