--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -18,14 +18,25 @@
     column-gap: 25px;
 }
 
-.navbar-links-container p {
+.navbar-links-container a {
     font-weight: 500;
     font-size: 16px;
     margin: 0px;
     text-transform: capitalize;
+    text-decoration: none;
+    color: #66fcf1;
+    padding: 5px 5px;
+    margin: 5px 0px;
+    justify-content: center;
+    width: 100px;
+    letter-spacing: .1em;
 }
 
-.navbar-links-container a {
+.navbar-container-menu a {
+    font-weight: 500;
+    font-size: 16px;
+    margin: 0px;
+    text-transform: capitalize;
     text-decoration: none;
     color: #66fcf1;
     padding: 5px 5px;
@@ -43,8 +54,18 @@
     color: #66fcf1;
 }
 
+.navbar-container-menu a:hover {
+    cursor: pointer;
+    background: #66fcf1;
+    text-decoration: none;
+    color: #ffffff;
+    border-radius: 100px;
+    text-shadow: 0 1px 1px 1px#000000, 0 1px 1px 1px #040404;
+    box-shadow: 0px 2px 2px 2px#45A29E;
+}
 
 .navbar-links-container a:hover {
+    cursor: pointer;
     background: #66fcf1;
     text-decoration: none;
     color: #ffffff;
@@ -55,8 +76,8 @@
 
 .navbar-menu_container {
     display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
     text-align: center;
     background: #1f2833;
@@ -67,7 +88,7 @@
     border-radius: 5px;
 }
 
-.navbar-menu-ontainer-links a {
+.navbar-menu-container-links a {
     text-decoration: none;
     color: #66fcf1;
     padding: 5px 5px;
@@ -84,7 +105,7 @@
     display: none;
 }
 
-.navbar-menu-ontainer-links a:hover {
+.navbar-menu-container-links a:hover {
     background: #66fcf1;
     text-decoration: none;
     color: #ffffff;
@@ -93,18 +114,21 @@
     box-shadow: 0px 2px 2px 2px#45A29E;
 }
 
+.narbar-logo {
+    text-decoration: none;
+}
+
 @media screen and (max-width: 700px) {
+
     .navbar-links-container {
         column-gap: 15px;
     }
-}
 
-@media screen and (max-width: 550px) {
     .navbar-links-container {
         display: none;
     }
 
     .navbar-menu {
-        display: flex;
+        display: block;
     }
 }
