--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -37,7 +37,7 @@
 }
 
 .home-greeting-name span {
-    display: inline;
+    display: inline-block;
     width: max-content;
     animation: typing 3s steps(28, end) forwards;
     white-space: nowrap;
