--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -105,11 +105,24 @@
 
     .home-tagline-container {
         margin: 0px 5px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     .home-greeting-name-container {
         margin: 0px 5px;
     }
+
+    .home-occupation {
+        flex-wrap: nowrap;
+        text-align: center;
+        font-size: 25px;
+        display: flex;
+        justify-content: center;
+        margin-top: 10px;
+    }
+
 }
 
 @media screen and (max-width: 450px) {
